fixed spacing

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -53,6 +53,7 @@ html {
 	font-weight:regular;
 	padding-top:20px;
 	padding-left:150px;
+	margin-bottom:20px;
 }
 
 #iwanto {
